# qtorganizer5-eds

./: .bzrignore  CMakeLists.txt  README  buildOnDevice.sh  config.h.in
cmake/: chewieplugin.cmake
debian/: changelog  control  copyright  qtorganizer5-eds.install  rules
organizer/: CMakeLists.txt  eds.json  qorganizer-eds-collection-engineid.cpp  qorganizer-eds-collection-engineid.h  qorganizer-eds-engine.cpp  qorganizer-eds-engine.h  qorganizer-eds-enginedata.cpp  qorganizer-eds-enginedata.h  qorganizer-eds-engineid.h  qorganizer-eds-factory.cpp  qorganizer-eds-factory.h  qorganizer-eds-fetchbyidrequestdata.cpp  qorganizer-eds-fetchbyidrequestdata.h  qorganizer-eds-fetchocurrencedata.cpp  qorganizer-eds-fetchocurrencedata.h  qorganizer-eds-fetchrequestdata.cpp  qorganizer-eds-fetchrequestdata.h  qorganizer-eds-parseeventthread.cpp  qorganizer-eds-parseeventthread.h  qorganizer-eds-removebyidrequestdata.cpp  qorganizer-eds-removebyidrequestdata.h  qorganizer-eds-removecollectionrequestdata.cpp  qorganizer-eds-removecollectionrequestdata.h  qorganizer-eds-removerequestdata.cpp  qorganizer-eds-removerequestdata.h  qorganizer-eds-requestdata.cpp  qorganizer-eds-requestdata.h  qorganizer-eds-savecollectionrequestdata.cpp  qorganizer-eds-savecollectionrequestdata.h  qorganizer-eds-saverequestdata.cpp  qorganizer-eds-saverequestdata.h  qorganizer-eds-source-registry.cpp  qorganizer-eds-source-registry.h  qorganizer-eds-viewwatcher.cpp  qorganizer-eds-viewwatcher.h
qorganizer/: CMakeLists.txt  qorganizer-eds-collection-engineid.cpp  qorganizer-eds-collection-engineid.h  qorganizer-eds-engine.cpp  qorganizer-eds-engine.h  qorganizer-eds-enginedata.cpp  qorganizer-eds-enginedata.h  qorganizer-eds-engineid.cpp  qorganizer-eds-engineid.h  qorganizer-eds-factory.cpp  qorganizer-eds-factory.h  qorganizer-eds-fetchbyidrequestdata.cpp  qorganizer-eds-fetchbyidrequestdata.h  qorganizer-eds-fetchocurrencedata.cpp  qorganizer-eds-fetchocurrencedata.h  qorganizer-eds-fetchrequestdata.cpp  qorganizer-eds-fetchrequestdata.h  qorganizer-eds-removebyidrequestdata.cpp  qorganizer-eds-removebyidrequestdata.h  qorganizer-eds-removecollectionrequestdata.cpp  qorganizer-eds-removecollectionrequestdata.h  qorganizer-eds-removerequestdata.cpp  qorganizer-eds-removerequestdata.h  qorganizer-eds-requestdata.cpp  qorganizer-eds-requestdata.h  qorganizer-eds-savecollectionrequestdata.cpp  qorganizer-eds-savecollectionrequestdata.h  qorganizer-eds-saverequestdata.cpp  qorganizer-eds-saverequestdata.h  qorganizer-eds-source-registry.cpp  qorganizer-eds-source-registry.h  qorganizer-eds-viewwatcher.cpp  qorganizer-eds-viewwatcher.h
tests/unittest/: CMakeLists.txt  cancel-operation-test.cpp  collections-test.cpp  eds-base-test.cpp  eds-base-test.h  event-test.cpp  fetchitem-test.cpp  filter-test.cpp  filter-test.cpp.moved  gscopedpointer.h  itemid-test.cpp  parseecal-test.cpp  recurrence-test.cpp  run-eds-test.sh
